tests/models/struct/u64/fail/alias.rs
use dade::model;
#[model]
struct TestModel {
    #[field(alias = 2)]
    value: u64,
}
fn main() {}
